--- a/app/src/main/res/layout/row_diet_plan_created.xml
+++ b/app/src/main/res/layout/row_diet_plan_created.xml
@@ -58,7 +58,7 @@
 
                 <ImageView
                     android:layout_alignParentEnd="true"
-                    android:id="@+id/ivDropDown"
+                    android:id="@+id/ivDietDropDown"
                     android:layout_marginEnd="@dimen/margin_8dp"
                     android:layout_width="@dimen/dimen_20"
                     android:layout_height="@dimen/dimen_20"
@@ -66,7 +66,7 @@
 
                 <ImageView
                     android:layout_alignParentEnd="true"
-                    android:id="@+id/ivDropUp"
+                    android:id="@+id/ivDietGreen"
                     android:visibility="gone"
                     android:layout_marginEnd="@dimen/margin_8dp"
                     android:layout_width="@dimen/dimen_20"
