--- a/app/src/main/res/layout/row_meal_types.xml
+++ b/app/src/main/res/layout/row_meal_types.xml
@@ -51,13 +51,14 @@
                         android:fontFamily="@font/avenir_black" />
 
                     <TextView
+                        android:id="@+id/tvSetDietPlan"
                         android:layout_marginTop="@dimen/margin_4dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
-                        android:textSize="@dimen/font_12sp"
-                        android:textColor="@color/colorPrimary"
-                        android:fontFamily="@font/avenir_black" />
+                        android:textSize="@dimen/font_10sp"
+                        android:textColor="@color/colorTextLightDark"
+                        android:fontFamily="@font/avenir_light" />
 
 
             </LinearLayout>
