--- a/app/src/main/res/layout/activity_center_trainer_booking_summary.xml
+++ b/app/src/main/res/layout/activity_center_trainer_booking_summary.xml
@@ -371,6 +371,7 @@
 
                 <LinearLayout
                     android:id="@+id/llContent"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorAgeBg"
