--- a/app/src/main/res/layout/activity_slot_book.xml
+++ b/app/src/main/res/layout/activity_slot_book.xml
@@ -115,6 +115,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/tv_book_slot_later"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/font_10sp"
+                android:paddingTop="@dimen/dimen_12"
+                android:layout_gravity="center"
+                android:paddingStart="@dimen/dimen_12"
+                android:paddingEnd="@dimen/dimen_12"
+                android:gravity="center"
+                android:paddingBottom="@dimen/dimen_12"
+                android:layout_marginStart="@dimen/margin_8dp"
+                android:text="@string/i_will_do_later"
+                android:textColor="@color/colorTextRed"
+                android:fontFamily="@font/avenir_light" />
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
