--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -596,6 +596,19 @@
                              android:textAllCaps="false"/>
                      </LinearLayout>
 
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_manage_slots"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:visibility="gone"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:orientation="horizontal" />
+
+
+
                     <LinearLayout
                         android:id="@+id/llTopPersonalTrainers"
                         android:layout_width="match_parent"
