--- a/app/src/main/res/layout/row_slots.xml
+++ b/app/src/main/res/layout/row_slots.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
@@ -9,7 +8,6 @@
 
         <import type="android.view.View"/>
     </data>
--->
 
 <RelativeLayout
     android:id="@+id/rltSlots"
@@ -21,8 +19,7 @@
     android:paddingBottom="@dimen/dimen_10"
     android:layout_marginTop="@dimen/margin_4dp"
     android:layout_marginBottom="@dimen/margin_4dp"
-    android:elevation="1dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:elevation="1dp">
 
     <ImageView
         android:id="@+id/ivSelected"
@@ -67,5 +64,4 @@
 
     </RelativeLayout>
 
-<!--
-</layout>-->
+</layout>
