--- a/app/src/main/res/layout/activity_about_you.xml
+++ b/app/src/main/res/layout/activity_about_you.xml
@@ -146,8 +146,8 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="65"
-                    app:minValue="18"
+                    app:maxValue="90"
+                    app:minValue="12"
                     app:normalTrackColor="@color/colorHintText"
                     app:normalTrackWidth="@dimen/dimen_2"
                     app:stiffness="300"
@@ -212,7 +212,7 @@
                         android:fontFamily="@font/avenir_black"
                         android:textStyle="normal"
                         android:layout_gravity="center"
-                        android:text="@string/cm"
+                        android:text="@string/feets"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="@dimen/font_11sp" />
 
@@ -251,8 +251,8 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="150"
-                    app:minValue="50"
+                    app:maxValue="10"
+                    app:minValue="1"
                     android:padding="@dimen/margin_4dp"
                     app:normalTrackColor="@color/colorHintText"
                     app:normalTrackWidth="@dimen/dimen_2"
@@ -357,7 +357,7 @@
                     android:layout_marginStart="@dimen/dimen_10"
                     app:highlightTrackColor="@color/colorPrimary"
                     app:highlightTrackWidth="@dimen/dimen_2"
-                    app:maxValue="200"
+                    app:maxValue="300"
                     app:minValue="30"
                     android:padding="@dimen/margin_4dp"
                     app:normalTrackColor="@color/colorHintText"
